--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -141,15 +141,16 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup>
-    <None Include="$(MSBuildProjectFile)" />
-  </ItemGroup>
+  <!-- Copy sources tools -->
   <Target Name="CopySources">
+    <ItemGroup>
+      <ProjectFile Include="$(MSBuildProjectFile)" />
+    </ItemGroup>
     <Copy SourceFiles="@(Compile)"
           DestinationFiles="@(Compile->'$(OutputPath)$(MSBuildProjectName)\%(RelativeDir)%(Filename)%(Extension)')"
           Retries="5"
           SkipUnchangedFiles="true" />
-    <Copy SourceFiles="@(None)"
+    <Copy SourceFiles="@(ProjectFile)"
           DestinationFiles="$(OutputPath)$(MSBuildProjectName)\%(RecursiveDir)%(Filename)%(Extension)"
           Retries="5"
           SkipUnchangedFiles="true" />
@@ -157,12 +158,10 @@
   <!-- Update project version tools -->
   <Import Project="$(MSBuildExtensionsPath)\ExtensionPack\4.0\MSBuild.ExtensionPack.tasks"
           Condition="Exists('$(MSBuildExtensionsPath)\ExtensionPack\4.0\MSBuild.ExtensionPack.tasks')" />
-  <ItemGroup>
-    <AssemblyInfoFiles Include="$(MSBuildProjectDirectory)\Properties\AssemblyInfo.cs"/>
-  </ItemGroup>
-  <Target Name="UpdateVersion"
-          Inputs="@(AssemblyInfoFiles)"
-          Outputs="UpdatedAssemblyVersionFiles">
+  <Target Name="UpdateVersion">
+    <ItemGroup>
+      <AssemblyInfoFiles Include="$(MSBuildProjectDirectory)\Properties\AssemblyInfo.cs"/>
+    </ItemGroup>
     <AssemblyInfo
         AssemblyInfoFiles="@(AssemblyInfoFiles)"
         AssemblyVersion="$(AssemblyVersion)"
