--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -109,7 +109,11 @@
     <Compile Include="src\events\IDxTimeAndSale.cs" />
     <Compile Include="src\events\IDxTrade.cs" />
     <Compile Include="src\IDxConnection.cs" />
-    <Compile Include="src\IDxSnapshotListener.cs" />
+    <Compile Include="src\listeners\IDxCandleSnapshotListener.cs" />
+    <Compile Include="src\listeners\IDxSpreadOrderSnapshotListener.cs" />
+    <Compile Include="src\listeners\IDxTimeAndSaleSnapshotListener.cs" />
+    <Compile Include="src\listeners\IDxOrderSnapshotListener.cs" />
+    <Compile Include="src\listeners\IDxSnapshotListener.cs" />
     <Compile Include="src\IDxSubscription.cs" />
     <Compile Include="src\io\CSVFormatException.cs" />
     <Compile Include="src\io\CSVReader.cs" />
@@ -135,6 +139,7 @@
     <Compile Include="src\IDxOrderViewListener.cs" />
     <Compile Include="src\Tools.cs" />
     <Compile Include="src\util\DayUtil.cs" />
+    <Compile Include="src\util\EventTypeUtil.cs" />
     <Compile Include="src\util\MathUtil.cs" />
     <Compile Include="src\util\StringCache.cs" />
     <Compile Include="src\util\TimePeriod.cs" />
