--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -97,8 +97,14 @@
     <Compile Include="src\events\IDxTradeBase.cs" />
     <Compile Include="src\extras\EventPrinter.cs" />
     <Compile Include="src\extras\TimeConverter.cs" />
-    <Compile Include="src\IDxCandleListener.cs" />
-    <Compile Include="src\IDxFeedListener.cs" />
+    <Compile Include="src\listeners\event\IDxCandleListener.cs" />
+    <Compile Include="src\listeners\event\IDxTradeListener.cs" />
+    <Compile Include="src\listeners\event\IDxOrderListener.cs" />
+    <Compile Include="src\listeners\event\IDxProfileListener.cs" />
+    <Compile Include="src\listeners\event\IDxFundamentalListener.cs" />
+    <Compile Include="src\listeners\event\IDxTimeAndSaleListener.cs" />
+    <Compile Include="src\listeners\event\IDxQuoteListener.cs" />
+    <Compile Include="src\listeners\event\IDxFeedListener.cs" />
     <Compile Include="src\events\EventType.cs" />
     <Compile Include="src\events\IDxEventBuf.cs" />
     <Compile Include="src\events\IDxSummary.cs" />
@@ -109,11 +115,14 @@
     <Compile Include="src\events\IDxTimeAndSale.cs" />
     <Compile Include="src\events\IDxTrade.cs" />
     <Compile Include="src\IDxConnection.cs" />
-    <Compile Include="src\listeners\IDxCandleSnapshotListener.cs" />
-    <Compile Include="src\listeners\IDxSpreadOrderSnapshotListener.cs" />
-    <Compile Include="src\listeners\IDxTimeAndSaleSnapshotListener.cs" />
-    <Compile Include="src\listeners\IDxOrderSnapshotListener.cs" />
-    <Compile Include="src\listeners\IDxSnapshotListener.cs" />
+    <Compile Include="src\listeners\snapshot\IDxCandleSnapshotListener.cs" />
+    <Compile Include="src\listeners\event\IDxSpreadOrderListener.cs" />
+    <Compile Include="src\listeners\event\IDxTradeEthListener.cs" />
+    <Compile Include="src\listeners\event\IDxEventListener.cs" />
+    <Compile Include="src\listeners\snapshot\IDxSpreadOrderSnapshotListener.cs" />
+    <Compile Include="src\listeners\snapshot\IDxTimeAndSaleSnapshotListener.cs" />
+    <Compile Include="src\listeners\snapshot\IDxOrderSnapshotListener.cs" />
+    <Compile Include="src\listeners\snapshot\IDxSnapshotListener.cs" />
     <Compile Include="src\IDxSubscription.cs" />
     <Compile Include="src\io\CSVFormatException.cs" />
     <Compile Include="src\io\CSVReader.cs" />
@@ -136,7 +145,7 @@
     <Compile Include="src\ipf\option\OptionChain.cs" />
     <Compile Include="src\ipf\option\OptionChainsBuilder.cs" />
     <Compile Include="src\ipf\option\OptionSeries.cs" />
-    <Compile Include="src\IDxOrderViewListener.cs" />
+    <Compile Include="src\listeners\IDxOrderViewListener.cs" />
     <Compile Include="src\Tools.cs" />
     <Compile Include="src\util\DayUtil.cs" />
     <Compile Include="src\util\EventTypeUtil.cs" />
