--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -102,6 +102,9 @@
     <Compile Include="src\extras\EventPrinter.cs" />
     <Compile Include="src\extras\TimeConverter.cs" />
     <Compile Include="src\listeners\event\IDxCandleListener.cs" />
+    <Compile Include="src\listeners\event\IDxGreeksListener.cs" />
+    <Compile Include="src\listeners\event\IDxSeriesListener.cs" />
+    <Compile Include="src\listeners\event\IDxTheoPriceListener.cs" />
     <Compile Include="src\listeners\event\IDxTradeListener.cs" />
     <Compile Include="src\listeners\event\IDxOrderListener.cs" />
     <Compile Include="src\listeners\event\IDxProfileListener.cs" />
@@ -119,10 +122,13 @@
     <Compile Include="src\events\IDxTimeAndSale.cs" />
     <Compile Include="src\events\IDxTrade.cs" />
     <Compile Include="src\IDxConnection.cs" />
+    <Compile Include="src\listeners\event\IDxUnderlyingListener.cs" />
     <Compile Include="src\listeners\snapshot\IDxCandleSnapshotListener.cs" />
     <Compile Include="src\listeners\event\IDxSpreadOrderListener.cs" />
     <Compile Include="src\listeners\event\IDxTradeEthListener.cs" />
     <Compile Include="src\listeners\event\IDxEventListener.cs" />
+    <Compile Include="src\listeners\snapshot\IDxGreeksSnapshotListener.cs" />
+    <Compile Include="src\listeners\snapshot\IDxSeriesSnapshotListener.cs" />
     <Compile Include="src\listeners\snapshot\IDxSpreadOrderSnapshotListener.cs" />
     <Compile Include="src\listeners\snapshot\IDxTimeAndSaleSnapshotListener.cs" />
     <Compile Include="src\listeners\snapshot\IDxOrderSnapshotListener.cs" />
