--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -87,6 +87,7 @@
     <Compile Include="src\DxException.cs" />
     <Compile Include="src\events\IDxEventType.cs" />
     <Compile Include="src\events\IDxSpreadOrder.cs" />
+    <Compile Include="src\events\OrderSource.cs" />
     <Compile Include="src\events\Scope.cs" />
     <Compile Include="src\events\IDxMarketEvent.cs" />
     <Compile Include="src\events\EventFlag.cs" />
