Implement Configuration event

--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -87,6 +87,7 @@
     <Compile Include="src\DxException.cs" />
     <Compile Include="src\events\IDxEventType.cs" />
     <Compile Include="src\events\IDxGreeks.cs" />
+    <Compile Include="src\events\IDxConfiguration.cs" />
     <Compile Include="src\events\IDxSeries.cs" />
     <Compile Include="src\events\IDxSpreadOrder.cs" />
     <Compile Include="src\events\IDxTheoPrice.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="src\extras\TimeConverter.cs" />
     <Compile Include="src\listeners\event\IDxCandleListener.cs" />
     <Compile Include="src\listeners\event\IDxGreeksListener.cs" />
+    <Compile Include="src\listeners\event\IDxConfigurationListener.cs" />
     <Compile Include="src\listeners\event\IDxSeriesListener.cs" />
     <Compile Include="src\listeners\event\IDxTheoPriceListener.cs" />
     <Compile Include="src\listeners\event\IDxTradeListener.cs" />
