--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -87,22 +87,24 @@
     <Compile Include="src\DxException.cs" />
     <Compile Include="src\events\IDxEventType.cs" />
     <Compile Include="src\events\IDxGreeks.cs" />
+    <Compile Include="src\events\IDxLastingEvent.cs" />
     <Compile Include="src\events\IDxSeries.cs" />
     <Compile Include="src\events\IDxSpreadOrder.cs" />
     <Compile Include="src\events\IDxTheoPrice.cs" />
     <Compile Include="src\events\IDxUnderlying.cs" />
+    <Compile Include="src\events\IndexedEvent.cs" />
     <Compile Include="src\events\OrderSource.cs" />
     <Compile Include="src\events\PriceType.cs" />
     <Compile Include="src\events\Scope.cs" />
     <Compile Include="src\events\IDxMarketEvent.cs" />
     <Compile Include="src\events\EventTypeAttribute.cs" />
-
     <Compile Include="src\events\EventFlag.cs" />
     <Compile Include="src\events\EventParams.cs" />
     <Compile Include="src\events\IDxCandle.cs" />
     <Compile Include="src\events\IDxOrderBase.cs" />
     <Compile Include="src\events\IDxTradeETH.cs" />
     <Compile Include="src\events\IDxTradeBase.cs" />
+    <Compile Include="src\events\TimeSeriesEvent.cs" />
     <Compile Include="src\extras\EventPrinter.cs" />
     <Compile Include="src\extras\TimeConverter.cs" />
     <Compile Include="src\listeners\event\IDxCandleListener.cs" />
@@ -160,6 +162,8 @@
     <Compile Include="src\ipf\option\OptionChainsBuilder.cs" />
     <Compile Include="src\ipf\option\OptionSeries.cs" />
     <Compile Include="src\listeners\IDxOrderViewListener.cs" />
+    <Compile Include="src\promise\Promise.cs" />
+    <Compile Include="src\promise\PromiseHandler.cs" />
     <Compile Include="src\Tools.cs" />
     <Compile Include="src\util\DayUtil.cs" />
     <Compile Include="src\util\EventTypeUtil.cs" />
