--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -87,7 +87,7 @@
     <Compile Include="src\DxException.cs" />
     <Compile Include="src\events\IDxEventType.cs" />
     <Compile Include="src\events\IDxGreeks.cs" />
-    <Compile Include="src\events\IDxLastingEvent.cs" />
+    <Compile Include="src\events\LastingEvent.cs" />
     <Compile Include="src\events\IDxSeries.cs" />
     <Compile Include="src\events\IDxSpreadOrder.cs" />
     <Compile Include="src\events\IDxTheoPrice.cs" />
