--- a/dxf_native/dxf_native.csproj
+++ b/dxf_native/dxf_native.csproj
@@ -72,16 +72,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\api\C.cs" />
-    <Compile Include="src\api\C32.cs" />
-    <Compile Include="src\api\CDataTypes.cs" />
-    <Compile Include="src\api\C64.cs" />
-    <Compile Include="src\DXFeedSnapshotCollector.cs" />
+    <Compile Include="src\native\C.cs" />
+    <Compile Include="src\native\C32.cs" />
+    <Compile Include="src\native\CDataTypes.cs" />
+    <Compile Include="src\native\C64.cs" />
+    <Compile Include="src\api\DXFeedSnapshotCollector.cs" />
     <Compile Include="src\LastingEventsCollector.cs" />
     <Compile Include="src\EventBuffer.cs" />
-    <Compile Include="src\DXEndpoint.cs" />
-    <Compile Include="src\DXFeed.cs" />
-    <Compile Include="src\DXFeedSubscription.cs" />
+    <Compile Include="src\api\DXEndpoint.cs" />
+    <Compile Include="src\api\DXFeed.cs" />
+    <Compile Include="src\api\DXFeedSubscription.cs" />
     <Compile Include="src\events\DxMarshal.cs" />
     <Compile Include="src\events\MarketEventImpl.cs" />
     <Compile Include="src\events\NativeCandle.cs" />
