--- a/dxf_tests/dxf_tests.csproj
+++ b/dxf_tests/dxf_tests.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\api\CandleSymbolTest.cs" />
+    <Compile Include="src\api\DXEndpointTest.cs" />
     <Compile Include="src\api\DxStringTest.cs" />
     <Compile Include="src\api\FullTest.cs" />
     <Compile Include="src\api\InstrumentProfileLiveTest.cs" />
