--- a/dxf_tests/dxf_tests.csproj
+++ b/dxf_tests/dxf_tests.csproj
@@ -75,6 +75,7 @@
     <Compile Include="src\api\CandleSymbolTest.cs" />
     <Compile Include="src\api\DXEndpointTest.cs" />
     <Compile Include="src\api\DXFeedSubscriptionTest.cs" />
+    <Compile Include="src\api\DXFeedTest.cs" />
     <Compile Include="src\api\DxStringTest.cs" />
     <Compile Include="src\api\FullTest.cs" />
     <Compile Include="src\api\InstrumentProfileLiveTest.cs" />
@@ -82,6 +83,11 @@
     <Compile Include="src\api\NativeCandleSubscriptionTest.cs" />
     <Compile Include="src\api\NativeSnapshotTest.cs" />
     <Compile Include="src\api\NativeSubscriptionTest.cs" />
+    <Compile Include="src\tools\eventplayer\EventPlayer.cs" />
+    <Compile Include="src\tools\eventplayer\IPlayedEvent.cs" />
+    <Compile Include="src\tools\eventplayer\MarshalDataTypes.cs" />
+    <Compile Include="src\tools\eventplayer\PlayedOrder.cs" />
+    <Compile Include="src\tools\eventplayer\PlayedTrade.cs" />
     <Compile Include="src\tools\OrderViewTestListener.cs" />
     <Compile Include="src\tools\SnapshotTestListener.cs" />
     <Compile Include="src\tools\TestListener.cs" />
