--- a/dxf_tests/dxf_tests.csproj
+++ b/dxf_tests/dxf_tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="src\api\DXEndpointTest.cs" />
     <Compile Include="src\api\DXFeedSubscriptionTest.cs" />
     <Compile Include="src\api\DXFeedTest.cs" />
+    <Compile Include="src\api\DXFeedTimeSeriesSubscriptionTest.cs" />
     <Compile Include="src\api\DxStringTest.cs" />
     <Compile Include="src\api\FullTest.cs" />
     <Compile Include="src\api\InstrumentProfileLiveTest.cs" />
