--- a/dxf_native/dxf_native.csproj
+++ b/dxf_native/dxf_native.csproj
@@ -72,13 +72,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\api\C.cs" />
-    <Compile Include="src\api\C32.cs" />
-    <Compile Include="src\api\CDataTypes.cs" />
-    <Compile Include="src\api\C64.cs" />
+    <Compile Include="src\native\C.cs" />
+    <Compile Include="src\native\C32.cs" />
+    <Compile Include="src\native\CDataTypes.cs" />
+    <Compile Include="src\native\C64.cs" />
     <Compile Include="src\EventBuffer.cs" />
     <Compile Include="src\events\DxMarshal.cs" />
-    <Compile Include="src\events\MarketEvent.cs" />
+    <Compile Include="src\events\MarketEventImpl.cs" />
     <Compile Include="src\events\NativeCandle.cs" />
     <Compile Include="src\events\NativeEventBuffer.cs" />
     <Compile Include="src\events\NativeGreeks.cs" />
