--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -87,6 +87,7 @@
     <Compile Include="src\candle\CandleSymbolAttributes.cs" />
     <Compile Include="src\candle\CandleType.cs" />
     <Compile Include="src\candle\ICandleSymbolAttribute.cs" />
+    <Compile Include="src\connection\ConnectionStatus.cs" />
     <Compile Include="src\data\EventFlag.cs" />
     <Compile Include="src\data\EventType.cs" />
     <Compile Include="src\events\IDxTradeETH.cs" />
