--- a/dxf_master/dxf_master.csproj
+++ b/dxf_master/dxf_master.csproj
@@ -122,6 +122,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Label>ToLib</Label>
     </Content>
+  </ItemGroup>
+  <ItemGroup Condition="'$(C_API_NO_TLS)'!='yes'">
     <Content Include="..\lib\libcrypto-41.dll">
       <Link>libcrypto-41.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -153,12 +155,14 @@
       <Label>ToLib</Label>
     </Content>
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Condition="'$(C_API_NO_TLS)'!='yes'">
     <Content Include="..\COPYING.libressl">
       <Link>COPYING.libressl</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Label>ToRoot</Label>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="..\ReleaseNotes.txt">
       <Link>ReleaseNotes.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -222,7 +226,7 @@
   <Import Project="$(MSBuildExtensionsPath)\ExtensionPack\4.0\MSBuild.ExtensionPack.tasks"
           Condition="Exists('$(MSBuildExtensionsPath)\ExtensionPack\4.0\MSBuild.ExtensionPack.tasks')"/>
   <Target Name="CreatePackage">
-    <MSBuild.ExtensionPack.Compression.Zip TaskAction="Create" CompressPath="$(OutputPath)" ZipFileName="$(OutputHomeDir)\$(AssemblyName)-$(AssemblyVersion).zip"/>
+    <MSBuild.ExtensionPack.Compression.Zip TaskAction="Create" CompressPath="$(OutputPath)" ZipFileName="$(OutputHomeDir)\$(AssemblyName)-$(AssemblyVersion)$(AssemblySuffix).zip"/>
   </Target>
   <!-- Run tests tools -->
   <Target Name="RunUnitTests">
