[DXFC-167] added automated release notes update during CI

--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -13,6 +13,8 @@ inputs:
     description: 'regex for prerelease tag detection'
     default: ''
     required: false
+  notes:
+    description: "release notes"
 runs:
   using: 'docker'
   image: 'Dockerfile'
